Further fix mobile layout issues

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -224,7 +224,7 @@ body {
 }
 
 html, body, div[role="group"][tabindex], #___gatsby {
-  min-height: 100%;
+  height: 100%;
 }
 
 .layout-wrapper {
@@ -648,6 +648,10 @@ pre tt:after {
 }
 
 @media only screen and (max-width: 768px) {
+  body {
+    height: 100%;
+  }
+
   .layout-wrapper {
     border: 16px solid var(--primary-brand-color);
   }
